<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout

        android:id="@+id/rootview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.mobithink.cyclobase.driving.DrivingActivity">

        <include
            layout="@layout/driving_statistics_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/amenagement_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/vocal"
            style="@style/DrivingButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_keyboard_voice_black_24dp" />

    </LinearLayout>


    <com.mobithink.cyclobase.ui.FabWithTextView
        android:id="@+id/fab_warning4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:visibility="invisible"
        app:eventName="@string/warning_label4"
        android:layout_marginBottom="300dp" />

    <com.mobithink.cyclobase.ui.FabWithTextView
        android:id="@+id/fab_warning3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:visibility="invisible"
        app:eventName="@string/warning_label3"
        android:layout_marginBottom="230dp" />

    <com.mobithink.cyclobase.ui.FabWithTextView
        android:id="@+id/fab_warning2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:visibility="invisible"
        app:eventName="@string/warning_label2"
        android:layout_marginBottom="160dp" />

    <com.mobithink.cyclobase.ui.FabWithTextView
        android:id="@+id/fab_warning1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:visibility="invisible"
        app:eventName="@string/warning_label1"
        android:layout_marginBottom="90dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/warning_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@color/white"
        android:background="@color/fab_color"
        android:src="@drawable/ic_warning"  />
</androidx.coordinatorlayout.widget.CoordinatorLayout>