<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@android:color/white">
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_weight="1">

              <androidx.emoji.widget.EmojiButton
                  android:id="@+id/panique"
                  android:textSize="@dimen/emoji_dim"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@android:color/white"
                  />
              <TextView
                  android:id="@+id/tv_panique"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/black"
                  android:text="@string/panique"/>

       </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_weight="1">
              <androidx.emoji.widget.EmojiButton
                  android:id="@+id/anxieux"
                  android:textSize="@dimen/emoji_dim"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@android:color/white"/>
              <TextView
                  android:id="@+id/tv_anxieux"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/black"
                  android:text="@string/anxieux"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_weight="1">
              <androidx.emoji.widget.EmojiButton
                  android:id="@+id/agace"
                  android:textSize="@dimen/emoji_dim"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@android:color/white"/>
              <TextView
                  android:id="@+id/tv_agace"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/black"
                  android:text="@string/agace"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_weight="1">
              <androidx.emoji.widget.EmojiButton
                  android:id="@+id/deconcerte"
                  android:textSize="@dimen/emoji_dim"
                  android:autoSizeMaxTextSize="@dimen/emoji_dim"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@android:color/white"/>
              <TextView
                  android:id="@+id/tv_deconcentre"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/black"
                  android:text="@string/deconcentre"/>
       </LinearLayout>
</LinearLayout>