<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/regular_margin"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_time"
                            android:paddingStart="@dimen/regular_margin"
                            android:textColor="@color/white"/>
                        <TextView
                            android:id="@+id/start_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0h00"
                            android:paddingStart="@dimen/regular_margin"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/session"
                            android:paddingStart="@dimen/regular_margin"
                            android:textColor="@color/white"/>
                        <Chronometer
                            android:id="@+id/simpleChronometer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/regular_margin"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/events"
                            android:paddingStart="@dimen/regular_margin"
                            android:textColor="@color/white"/>
                        <TextView
                            android:id="@+id/event_number_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:paddingStart="@dimen/regular_margin"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                </LinearLayout>
                <ImageButton
                    android:id="@+id/finish_trip"
                    style="@style/DrivingButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/finish"
                    android:layout_weight="1"/>

</LinearLayout>